lib: Do not leak proxies for detectable interfaces of devices

This avoids signals that will cause crashes.

https://bugzilla.gnome.org/show_bug.cgi?id=654172